--- a/styles/styles.css
+++ b/styles/styles.css
@@ -10,18 +10,20 @@
  * governing permissions and limitations under the License.
  */
 
-:root {
+ :root {
   /* colors */
+  --primary-color: rgb(255 234 3);
+  --secondary-color: rgb(32 32 32);
   --background-color: white;
-  --light-color: #f8f8f8;
-  --dark-color: #505050;
-  --text-color: #3b63fb;
-  --link-color: #3b63fb;
-  --link-hover-color: #1d3ecf;
+  --light-color: rgb(235 235 235);
+  --dark-color: var(--secondary-color);
+  --text-color: var(--secondary-color);
+  --link-color: var(--text-color);
+  --link-hover-color: black;
 
   /* fonts */
-  --body-font-family: roboto, roboto-fallback, sans-serif;
-  --heading-font-family: roboto-condensed, roboto-condensed-fallback, sans-serif;
+  --body-font-family: 'Source Sans Pro', source-sans-pro-normal-400-fallback, sans-serif;
+  --heading-font-family: 'Asar', asar-normal-400-fallback, sans-serif;
 
   /* body sizes */
   --body-font-size-m: 22px;
@@ -40,18 +42,37 @@
   --nav-height: 64px;
 }
 
-/* fallback fonts */
+/* Add fallback fonts here */
+
+    /* fallback font for Asar (normal - 400) */
+    @font-face {
+      font-family: "asar-normal-400-fallback";
+      size-adjust: 95.729%;
+      src: local("Arial");
+    }
+
+    /* fallback font for Source Sans Pro (normal - 400) */
+    @font-face {
+      font-family: "source-sans-pro-normal-400-fallback";
+      size-adjust: 92.889%;
+      src: local("Arial");
+    }
+
+
+/* fallback font for Asar (normal - 400) */
 @font-face {
-  font-family: roboto-condensed-fallback;
-  size-adjust: 88.82%;
-  src: local('Arial');
+  font-family: "asar-normal-400-fallback";
+  size-adjust: 95.729%;
+  src: local("Arial");
 }
 
+/* fallback font for Source Sans Pro (normal - 400) */
 @font-face {
-  font-family: roboto-fallback;
-  size-adjust: 99.529%;
-  src: local('Arial');
+  font-family: "source-sans-pro-normal-400-fallback";
+  size-adjust: 92.889%;
+  src: local("Arial");
 }
+
 
 @media (width >= 900px) {
   :root {
@@ -114,6 +135,16 @@ h6 {
 
 h1 { font-size: var(--heading-font-size-xxl); }
 h2 { font-size: var(--heading-font-size-xl); }
+
+/* Add a partial yellow underline under H2 */
+h2::after {
+  border-bottom: 2px solid var(--primary-color);
+  content: "";
+  display: block;
+  padding-top: 8px;
+  width: 84px;
+}
+
 h3 { font-size: var(--heading-font-size-l); }
 h4 { font-size: var(--heading-font-size-m); }
 h5 { font-size: var(--heading-font-size-s); }
@@ -157,7 +188,7 @@ button {
 a:any-link {
   color: var(--link-color);
   text-decoration: none;
-  overflow-wrap: break-word;
+  word-break: break-all;
 }
 
 a:hover {
@@ -173,7 +204,6 @@ button {
   max-width: 100%;
   margin: 12px 0;
   border: 2px solid transparent;
-  border-radius: 2.4em;
   padding: 0.5em 1.2em;
   font-family: var(--body-font-family);
   font-style: normal;
@@ -181,12 +211,16 @@ button {
   line-height: 1.25;
   text-align: center;
   text-decoration: none;
-  background-color: var(--link-color);
-  color: var(--background-color);
   cursor: pointer;
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
+
+  /* WKND specific treatments */
+  text-transform: uppercase;
+  background-color: var(--primary-color);
+  color: var(--dark-color);
+  border-radius: 0;
 }
 
 a.button:hover,
